# urc-control-systems-2024

./: .clang-format  .clang-tidy  .cmake-format  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: build_apps.yml  lint.yml
arm/: CMakeLists.txt  conanfile.py  hardware_map.hpp  main.cpp
arm-mimic/: CMakeLists.txt  conan.lock.old  conanfile.py  main.cpp  resource_list.hpp
arm-mimic/applications/: application.cpp  feedback_servo_demo.cpp
arm/applications/: application.cpp  application.hpp  homing_test.cpp
arm/include/: can_ids.hpp  can_message_processor.hpp  home.hpp
arm/src/: can_message_processor.cpp  home.cpp
drill/: CMakeLists.txt  conanfile.py  main.cpp  resource_list.hpp
drill/applications/: applications.cpp
drill/include/: implementation.hpp
drill/src/: implementation.cpp
drive/: CMakeLists.txt  conanfile.py  main.cpp  resource_list.hpp
drive/applications/: application.cpp  application.hpp  application_serial_commands.cpp  application_serial_commands.hpp  chassis_vel_demo.cpp  drive_cycle_demo.cpp  iterate_state.cpp  limit_switch_test.cpp  mc_stability_test.cpp  poll_connecitons.cpp  poll_motor_connections.cpp  prop_motor_test.cpp  sequential_homing_demo.cpp  serial_command_demo.cpp  simple_can_reply_demo.cpp  (+1 more)
drivers/: CMakeLists.txt  conanfile.py  graph.html  hardware_map.hpp  main.cpp  resource_list.hpp  status.hpp
hub/: CMakeLists.txt  conanfile.py  hardware_map.hpp  main.cpp  resource_list.hpp
perseus/: CMakeLists.txt  conanfile.py  hardware_map.hpp  main.cpp  resource_list.hpp  stm.sh
science/: CMakeLists.txt  conanfile.py  graph.html  main.cpp  resource_list.hpp
(+164 files in other folders)
